Corrected same mistake mentioned above for stretch file.

--- a/css/index.css
+++ b/css/index.css
@@ -234,10 +234,10 @@ ul{
     }
 }
 
-@media (max-width: 400px){
+@media (max-width: 500px){
 
     .container{
-        width: 400px;
+        width: 500px;
         margin: 0;
         padding: 0;
     }
